# BIOS0032_AI4Environment

./: .gitignore  README.md  apt.txt  install.R  pyproject.toml  requirements.txt  runtime.txt
00_Primer/: 00a_colab_introduction.ipynb  00b_Python.ipynb  00c_Libraries.ipynb
01_Work_environment/: 01a_Intro_to_colab.ipynb  01b_Intro_to_libraries.ipynb  01b_Intro_to_libraries_Solutions.ipynb
02_Intro_to_ML/: 02_Intro_to_ML.ipynb  02b_ML_model_sandbox.ipynb
03_Deep_Learning/: 03_Deep_Learning_intro.ipynb  03_Deep_Learning_intro_Solutions.ipynb
04_DL_for_Wildlife_Images/: 04_DL_for_Wildlife_Images.ipynb  04_DL_for_Wildlife_Images_Solutions.ipynb
05_AI_for_Bioacoustics/: 05_AI_for_Bioacoustics.ipynb  05_AI_for_Bioacoustics_Solutions.ipynb
10_AItoEcologicalModels2/: .RData  .Rhistory  AItoEcolMods_wk10.Rmd  AItoEcolMods_wk10.ipynb  README.md  setup.sh
10_AItoEcologicalModels2/rmarkdown/: AItoEcolMods_wk10.Rmd
10_AItoEcologicalModels2/solutions/: AItoEcolMods_wk10_solutions.Rmd
11_SpeciesDistributionModels/: README.md  bios0032_sdm_week11.ipynb
1_Work_environment/: 1_Intro_to_colab.ipynb  2_Intro_to_libraries.ipynb  2_Intro_to_libraries_Solutions.ipynb  AI4Environment_Week_1.ipynb  Week_1_Libraries.ipynb
2_Intro_to_ML/: 1_Intro_to_ML.ipynb  1_Intro_to_ML_Solutions.ipynb  2_Nearest_Neighbor_Classifier.ipynb  3_Classification.ipynb  4_Non_Linear_Regression.ipynb  4_Regression.ipynb  5_Pixel_Classification.ipynb  Lab1.ipynb
2_Intro_to_ML/data/: butterflies.csv
3_AI_for_Wildlife_Images/: .gitignore  Deep_Learning_for_Camera_Traps.ipynb  Deep_Learning_for_Camera_Traps_Solutions.ipynb  setup.sh
4_AI_for_Bioacoustics/: AI_for_Bioacoustics.ipynb  AI_for_Bioacoustics_Solution.ipynb
8_AI_and_Movement_Data/: MachineLearningForTrackingData_2023.Rmd  MachineLearningForTrackingData_2023.ipynb  TrackingAnalysis_R.ipynb
9_AItoEcologicalModels/: AItoEcolMods_wk9.ipynb  AItoEcolMods_wk9_AM.ipynb  AItoEcolMods_wk9_PM.ipynb  setup.sh
9_AItoEcologicalModels/rmarkdown/: AItoEcolMods_wk9_AM.rmd  AItoEcolMods_wk9_AM_solutions.Rmd
Lab1/: 1_Loading_and_Plotting_Features.ipynb  2_Nearest_Neighbor_Classifier.ipynb  3_Classification.ipynb  4_Non_Linear_Regression.ipynb  5_Pixel_Classification.ipynb  Evaluation.ipynb  Lab1.ipynb
(+44 files in other folders)
