[project]
name = "bios0032utils"
version = "0.0.1"
description = "Utilities for BIOS0032 AI4Environment colab notebooks"
authors = [
    {name = "Santiago Martinez", email = "santiago.balvanera.20@ucl.ac.uk"},
    {name = "Omiros Pantazis", email = "omiros.pantazis.16@ucl.ac.uk"},
    {name = "Kate Jones", email = "kate.e.jones@ucl.ac.uk"},
]
dependencies = [
    "librosa>=0.9.2",
    "matplotlib>=3.6.3",
    "plotly>=5.13.0",
    "ipython>=8.9.0",
    "pydub>=0.25.1",
    "ipywebrtc>=0.6.0",
    "xarray>=2023.1.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.urls]
"Homepage" = "https://github.com/MScEcologyAndDataScienceUCL/BIOS0032_AI4Environment"
"Bug Tracker" = "https://github.com/MScEcologyAndDataScienceUCL/BIOS0032_AI4Environment/issues"

[tool.pyright]
include = ["bios0032utils"]

[tool.rope]
source_folders = ["bios0032utils"]
